# Inventory

./: .gitignore  README.md
.github/workflows/: db-data-sync.yml  db-schema-deploy.yml  reconcile-dual-write.yml
backend/: .gitignore  README.md  ai_recognition.py  backup_service.py  data_backend.py  db.py  env.cloud.example  env.local.example  google_sheets.py  main.py  migration_service.py  pyproject.toml  reconcile_dual_write.py  seed_normalizer.py  supabase_client.py  xlsx_import.py
backend/supabase/: README.md  config.toml
backend/supabase/migrations/: 20260425220000_init_inventory_schema.sql  20260426223000_add_lookup_tables_and_inventory_fks.sql
backend/supabase_sql/: README.md  schema.sql
backend/tests/: test_admin_management_api.py  test_ai_recognition.py  test_ai_settings_api.py  test_ai_spec_recognition_api.py  test_asset_category_lookup_api.py  test_condition_status_lookup_api.py  test_data_backend_sync.py  test_db_workbook_resilience.py  test_detach_api.py  test_inventory_condition_status_validation_api.py  test_list_sorting_api.py  test_migration_service.py  test_movement_and_log_queries.py  test_reconcile_dual_write.py  test_request_api_guards.py  test_restore_item_api.py  test_schema_alignment.py  test_seed_normalizer.py  test_supabase_migration_sql.py  test_transaction_consistency.py  test_xlsx_import.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css
frontend/src/components/: TopNav.tsx  UploadPanel.tsx
frontend/src/lib/: date.test.ts  date.ts  day-picker.ts
(+52 files in other folders)
