[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "filelock>=3.13.1",
    "google-api-python-client>=2.127.0",
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.1",
    "openpyxl>=3.1.5",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]
